salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/AssetName__c.field-meta.xml
<CustomField>
    <fullName>AssetName__c</fullName>
    <inlineHelpText>The name of the asset being promoted in this campaign</inlineHelpText>
    <label>Asset Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>