salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/AudienceSegment__c.field-meta.xml
<CustomField>
    <fullName>AudienceSegment__c</fullName>
    <inlineHelpText>What account segment is being targeted by this campaign?</inlineHelpText>
    <label>Audience Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid-Market</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Named</fullName>
            </value>
            <value>
                <fullName>SLED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>