salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the person who authored or contributed to the content</inlineHelpText>
    <label>Author</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Authors</relationshipName>
    <type>Lookup</type>
</CustomField>