salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/CampaignMessage__c.field-meta.xml
<CustomField>
    <fullName>CampaignMessage__c</fullName>
    <inlineHelpText>The content theme or messaging this campaign aligns to</inlineHelpText>
    <label>Campaign Message</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Effectiveness - Time to Value</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Risk</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Displacement</fullName>
            </value>
            <value>
                <fullName>Effectiveness - Other</fullName>
            </value>
            <value>
                <fullName>Cloud - Getting Started</fullName>
            </value>
            <value>
                <fullName>Cloud - Cloud Proofing</fullName>
            </value>
            <value>
                <fullName>Cloud - Other</fullName>
            </value>
            <value>
                <fullName>Research - Building Intelligence</fullName>
            </value>
            <value>
                <fullName>Research - Other</fullName>
            </value>
            <value>
                <fullName>24x7 SOC-as-a-Service</fullName>
                <isActive>false</isActive>
                <label>24x7 SOC-as-a-Service</label>
            </value>
            <value>
                <fullName>Build holistic VM program</fullName>
                <isActive>false</isActive>
                <label>Build holistic VM program</label>
            </value>
            <value>
                <fullName>Collaborate on Risk</fullName>
                <isActive>false</isActive>
                <label>Collaborate on Risk</label>
            </value>
            <value>
                <fullName>Cross-Sell - Install Base</fullName>
                <isActive>false</isActive>
                <label>Cross-Sell - Install Base</label>
            </value>
            <value>
                <fullName>Detections/MITRE</fullName>
                <isActive>false</isActive>
                <label>Detections/MITRE</label>
            </value>
            <value>
                <fullName>Displacement - LogRythym</fullName>
                <isActive>false</isActive>
                <label>Displacement - LogRythym</label>
            </value>
            <value>
                <fullName>Displacement - Other</fullName>
                <isActive>false</isActive>
                <label>Displacement - Other</label>
            </value>
            <value>
                <fullName>Displacement - Qualys</fullName>
                <isActive>false</isActive>
                <label>Displacement - Qualys</label>
            </value>
            <value>
                <fullName>Displacement - Splunk</fullName>
                <isActive>false</isActive>
                <label>Displacement - Splunk</label>
            </value>
            <value>
                <fullName>Displacement - Tenable</fullName>
                <isActive>false</isActive>
                <label>Displacement - Tenable</label>
            </value>
            <value>
                <fullName>Improve Maturity</fullName>
                <isActive>false</isActive>
                <label>Improve Maturity</label>
            </value>
            <value>
                <fullName>MDR Basics</fullName>
                <isActive>false</isActive>
                <label>MDR Basics</label>
            </value>
            <value>
                <fullName>Managed DAST</fullName>
                <isActive>false</isActive>
                <label>Managed DAST</label>
            </value>
            <value>
                <fullName>Modern Coverage/Cloud</fullName>
                <isActive>false</isActive>
                <label>Modern Coverage/Cloud</label>
            </value>
            <value>
                <fullName>Productivity/Automation/SIEM + SOAR</fullName>
                <isActive>false</isActive>
                <label>Productivity/Automation/SIEM + SOAR</label>
            </value>
            <value>
                <fullName>Promote Efficiency</fullName>
                <isActive>false</isActive>
                <label>Promote Efficiency</label>
            </value>
            <value>
                <fullName>Reduce Risk</fullName>
                <isActive>false</isActive>
                <label>Reduce Risk</label>
            </value>
            <value>
                <fullName>Time To Value</fullName>
                <isActive>false</isActive>
                <label>Time To Value</label>
            </value>
            <value>
                <fullName>Total Risk Coverage</fullName>
                <isActive>false</isActive>
                <label>Total Risk Coverage</label>
            </value>
            <value>
                <fullName>Understand Risk</fullName>
                <isActive>false</isActive>
                <label>Understand Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>