salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Downloads</fullName>
            </value>
            <value>
                <fullName>Downloads : AppSpider Pro</fullName>
            </value>
            <value>
                <fullName>Downloads : Metasploit Community</fullName>
            </value>
            <value>
                <fullName>Downloads : Metasploitable</fullName>
            </value>
            <value>
                <fullName>Downloads : NeXpose Community</fullName>
            </value>
            <value>
                <fullName>Downloads : ScanNow</fullName>
            </value>
            <value>
                <fullName>Downloads : Trial - UserInsight</fullName>
            </value>
            <value>
                <fullName>Downloads : Trials - Metasploit</fullName>
            </value>
            <value>
                <fullName>Downloads : Trials - Nexpose Enterprise</fullName>
            </value>
            <value>
                <fullName>E*Commerce</fullName>
            </value>
            <value>
                <fullName>Email/Direct Mail Campaigns : Account Based Marketing</fullName>
            </value>
            <value>
                <fullName>Email/Direct Mail Campaigns : Direct Mail</fullName>
            </value>
            <value>
                <fullName>Email/Direct Mail Campaigns : Email - Outbound</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Event : CISO Events</fullName>
            </value>
            <value>
                <fullName>Event : Corporate Events</fullName>
            </value>
            <value>
                <fullName>Event : Field Events</fullName>
            </value>
            <value>
                <fullName>Event : Partner Events</fullName>
            </value>
            <value>
                <fullName>Event : Party/Dinner/Cocktails</fullName>
            </value>
            <value>
                <fullName>Event : Tradeshow/Seminar</fullName>
            </value>
            <value>
                <fullName>Event : Virtual</fullName>
            </value>
            <value>
                <fullName>Existing Customers</fullName>
            </value>
            <value>
                <fullName>Lists/Sourcing</fullName>
            </value>
            <value>
                <fullName>Lists/Sourcing : Marketing Sourcing</fullName>
            </value>
            <value>
                <fullName>Mobilisafe Online Live Demo</fullName>
            </value>
            <value>
                <fullName>Other Marketing</fullName>
            </value>
            <value>
                <fullName>Other Marketing : Partner Marketing Program</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>