salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/CreateLeadfromContact__c.field-meta.xml
<CustomField>
    <fullName>CreateLeadfromContact__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This field is used to Enable/Disable Creation of Lead from Contact upon Campaign Member Creation (PHX-5980) and by default it is checked.</description>
    <inlineHelpText>This field is used to Enable/Disable Creation of Lead from Contact upon Campaign Member Creation.</inlineHelpText>
    <label>Create Lead from Contact</label>
    <type>Checkbox</type>
</CustomField>