salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/FollowUpResources__c.field-meta.xml
<CustomField>
    <fullName>FollowUpResources__c</fullName>
    <inlineHelpText>Link to a document with additional follow-up resources (e.g. scripts, follow-up questions, takeaways, pitches)</inlineHelpText>
    <label>Follow Up Resources</label>
    <type>Url</type>
</CustomField>