salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/FunnelStage__c.field-meta.xml
<CustomField>
    <fullName>FunnelStage__c</fullName>
    <inlineHelpText>The stage of the buyer&#39;s journey this campaign aligns to</inlineHelpText>
    <label>Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Conversion</fullName>
            </value>
            <value>
                <fullName>Bottom</fullName>
                <isActive>false</isActive>
                <label>Bottom</label>
            </value>
            <value>
                <fullName>Middle</fullName>
                <isActive>false</isActive>
                <label>Middle</label>
            </value>
            <value>
                <fullName>Top</fullName>
                <isActive>false</isActive>
                <label>Top</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>