salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/HotLeadCampaign__c.field-meta.xml
<CustomField>
    <fullName>HotLeadCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If a Lead is a member of any Campaign that has this checkbox checked, the Hot Lead flame image will appear</description>
    <label>Hot Lead Campaign</label>
    <type>Checkbox</type>
</CustomField>