salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/LegacyCombinedNetsuiteId__c.field-meta.xml
<CustomField>
    <fullName>LegacyCombinedNetsuiteId__c</fullName>
    <description>This field captures concatenates the legacy NetSuite Campaign IDs together based on the transformation to identify the truly unique campaign (parsing out the variations due to attendance statuses). For example, a &quot;Campaign Internal Derived ID&quot; = &quot;1&quot; may have a &quot;Campaign Legacy Combined NetSuite ID&quot; = &quot;6,7,8,9&quot;. All three custom Campaign ID-related fields, in theory, will have the same value for any campaigns created by post-migration. However, only the &quot;NetSuite Campaign ID&quot; field will be populated post-migration.</description>
    <inlineHelpText>This field is used ONLY for purposes of data migration from NetSuite for Phoenix 1.0 and possibly for Phoenix 2.0</inlineHelpText>
    <label>Campaign Legacy Combined NetSuite ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>