salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/LinktoAsset__c.field-meta.xml
<CustomField>
    <fullName>LinktoAsset__c</fullName>
    <inlineHelpText>Link to the asset promoted by this campaign</inlineHelpText>
    <label>Link to Asset</label>
    <type>Url</type>
</CustomField>