salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/MQLGoal__c.field-meta.xml
<CustomField>
    <fullName>MQLGoal__c</fullName>
    <inlineHelpText>The forecasted number of MQLs this campaign will generate</inlineHelpText>
    <label>MQL Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>