salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/NetsuiteCampaignInternalId__c.field-meta.xml
<CustomField>
    <fullName>NetsuiteCampaignInternalId__c</fullName>
    <description>This field allows linking back to NetSuite by choosing one of the combined legacy Campaign IDs and providing a single value. For example, a &quot;Campaign Internal Derived ID&quot; = &quot;1&quot; will have &quot;Campaign Legacy Combined NetSuite ID&quot; = &quot;6,7,8,9&quot; and the &quot;NetSuite Campaign ID&quot; will be &quot;6&quot;. All three custom Campaign ID-related fields, in theory, will have the same value for any campaigns created by post-migration. However, only the &quot;NetSuite Campaign ID&quot; field will be populated post-migration.</description>
    <label>Netsuite Campaign Internal ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>