salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/PowerOfOne__c.field-meta.xml
<CustomField>
    <fullName>PowerOfOne__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PowerOfOne - Campaign</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>