salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <inlineHelpText>This field is used only for the Self Registration type of campaign, so the value will be populated only on that type of campaigns.</inlineHelpText>
    <label>Self Registration Product Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>