salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/ProductFamily__c.field-meta.xml
<CustomField>
    <fullName>ProductFamily__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Products</fullName>
                <isActive>false</isActive>
                <label>All Products</label>
            </value>
            <value>
                <fullName>Analytic Response</fullName>
                <isActive>false</isActive>
                <label>Analytic Response</label>
            </value>
            <value>
                <fullName>AppSpider</fullName>
            </value>
            <value>
                <fullName>Incident Detection and Response</fullName>
            </value>
            <value>
                <fullName>Incident Response Services</fullName>
                <isActive>false</isActive>
                <label>Incident Response Services</label>
            </value>
            <value>
                <fullName>InsightAppSec</fullName>
            </value>
            <value>
                <fullName>InsightIDR</fullName>
            </value>
            <value>
                <fullName>InsightOps</fullName>
            </value>
            <value>
                <fullName>InsightPhish</fullName>
                <isActive>false</isActive>
                <label>InsightPhishing</label>
            </value>
            <value>
                <fullName>Insight Platform</fullName>
            </value>
            <value>
                <fullName>InsightUBA</fullName>
                <isActive>false</isActive>
                <label>InsightUBA</label>
            </value>
            <value>
                <fullName>InsightVM</fullName>
            </value>
            <value>
                <fullName>Komand</fullName>
                <isActive>false</isActive>
                <label>Komand</label>
            </value>
            <value>
                <fullName>LogEntries</fullName>
                <isActive>false</isActive>
                <label>LogEntries</label>
            </value>
            <value>
                <fullName>Managed Service</fullName>
            </value>
            <value>
                <fullName>Metasploit</fullName>
            </value>
            <value>
                <fullName>Nexpose</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Strategic Services</fullName>
                <isActive>false</isActive>
                <label>Strategic Services</label>
            </value>
            <value>
                <fullName>Threat Exposure Management</fullName>
            </value>
            <value>
                <fullName>InsightConnect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>