salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/ProductSubscriptionProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductSubscriptionProductCode__c</fullName>
    <label>Product Subscription Product Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>