salesforce/Forcelandia - SFDX Demo Test/force-app/main/default/objects/Campaign/fields/ViewAllCampaignMembers__c.field-meta.xml
<CustomField>
    <fullName>ViewAllCampaignMembers__c</fullName>
    <formula>IF(
$User.UIThemeDisplayed=&quot;Theme4d&quot;,
(HYPERLINK($Setup.EnvironmentSetting__c.LightningBaseURL__c &amp; &quot;one/one.app#/sObject/&quot;&amp; $Setup.EnvironmentSetting__c.ReportId__c&amp;&quot;/view?fv0= &quot;&amp; Id&amp;&quot;&quot;,&quot;View All Campaign Member&quot;)),
(HYPERLINK(&quot;/&quot;&amp; $Setup.EnvironmentSetting__c.ReportId__c&amp;&quot;?pv0=&quot;&amp;Id&amp;&quot;&quot;,&quot;View All Campaign Member&quot;))
)</formula>
    <label>View All Campaign Member</label>
    <type>Text</type>
</CustomField>